1. Report generation build step improvised 2. A new build step to call Reqtify function is added

--- a/src/main/resources/io/jenkins/plugins/Messages.properties
+++ b/src/main/resources/io/jenkins/plugins/Messages.properties
@@ -1,4 +1,5 @@
-ReqtifyGenerateReport.DisplayName=Reqtify: Generate a report
+ReqtifyGenerateReport.DisplayName=Reqtify: Generate Report
+ReqtifyCallFunction.DisplayName=Reqtify: Call Function
 ReqtifyGenerateReport.Lang=eng
 ReqtifySleeper.DisplayName=Reqtify: Timer
 
